Bug 1148718 - init TextureSource for current TextureHost when attach. r=nical, r=sotaro